packages/typ/tests/fixtures/diagnostics/0889_gadt_operator_on_wrong_branch_03.ml.infer.expected
File "0889_gadt_operator_on_wrong_branch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0889_gadt_operator_on_wrong_branch_03 is not a valid module name.

File "0889_gadt_operator_on_wrong_branch_03.ml", line 11, characters 21-22:
11 |     | WBool_gamma -> x + 3
                          ^
Error: The value x has type a = bool but an expression was expected of type
         int
